# footpredict-pl

./: .gitignore  README.md  pyproject.toml
data/reports/: feature_correlation.csv  feature_importance.csv
notebooks/: 00_explore_api.ipynb  01_build_dataset.ipynb  02_features.ipynb  03_train_backtest.ipynb  04_kelly_site.ipynb
scripts/: analyze_features.py  build_dataset.py  fetch_matches.py  find_events_endpoint.py  predict_next.py  run_all.ps1  train_backtest.py
src/: config.py
src/api/: sofascore.py
src/betting/: strategy.py
src/data/: build_dataset.py  normalize.py  season_catalog.py
src/features/: elo.py
src/footpredict/api/: client.py  sofascore.py
src/footpredict/betting/: kelly.py
src/footpredict/data/: build_dataset.py  storage.py
src/footpredict/features/: form.py  pipeline.py  rest_days.py
src/footpredict/models/: backtest.py  train.py
src/footpredict/validation/: checks.py
src/models/: registry.py
webapp/: streamlit_app.py
